--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-globe"></i>
+                                            <img src="<a href="https://www.flaticon.com/free-icons/number-1" title="number 1 icons">Number 1 icons created by Abrrakhlaed2626 - Flaticon</a>" alt="" width="30" height="30">
                                         </div>
                                     </div>
                                 </div>
