--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1XFv5bn3aDVgcXhhBpi6fZxQ4tarJE9re/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-lightbulb"></i>
+                                            <img src="images/number-2.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
@@ -282,7 +282,7 @@ https://templatemo.com/tm-578-first-portfolio
 
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-phone"></i>
+                                            <img src="images/number-3.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
@@ -300,7 +300,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1y_H6eQafA8MklQdzg76xxTzZnxhRk4D0/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-google"></i>
+                                            <img src="images/number-4.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
@@ -319,7 +319,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1MVQvNTSW7xDYILwRG7pxq2jWqMAs1OM4/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-globe"></i>
+                                            <img src="images/number-5.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
@@ -339,7 +339,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1OrTJk6_bcHiRY4eJ0B_IY0glRsl2IKNt/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-lightbulb"></i>
+                                            <img src="images/6.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div> 
@@ -358,7 +358,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1ypsrxMSfNt9ZM8l5aFqzcV46GfaB_3dO/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-globe"></i>
+                                            <img src="images/number-7.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
@@ -378,7 +378,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1TC5n8NEaKdzTeXApj3gKXf3rUq6zoVf9/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-lightbulb"></i>
+                                            <img src="images/number-8.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div> 
@@ -397,7 +397,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1DYkv8vHSr6ohwJUKfXsCVzzXk43tKqPR/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-globe"></i>
+                                            <img src="images/number-9.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
@@ -417,7 +417,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/15s8iUvUBgumCYi03fqjO91i0PEWqzv_b/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-lightbulb"></i>
+                                            <img src="images/number-10.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div> 
