--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1OrTJk6_bcHiRY4eJ0B_IY0glRsl2IKNt/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <img src="images/6.png" width="100" height="100">
+                                            <img src="images/6-removebg-preview.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div> 
@@ -436,7 +436,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1m-_5J_L0a6FPa7-nW8wePzEdNcmDsEcD/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-globe"></i>
+                                            <img src="images/11-removebg-preview.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
@@ -456,7 +456,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1EO1-QRAHq6anNmyYyRWtIMlH0N655RjJ/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-lightbulb"></i>
+                                            <img src="images/12-removebg-preview.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div> 
@@ -476,7 +476,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1JIldE2x44R3TZRbBWi1U1SXoxIdn8Ey7/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-globe"></i>
+                                            <img src="images/13-removebg-preview.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
@@ -496,7 +496,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1Pco9OYfYGzua23qHUhQVb4a5ddgyRub2/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-globe"></i>
+                                            <img src="images/14-removebg-preview.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
@@ -517,7 +517,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/13f4-OBFYbD2mcFWgCboKJhT2EOAg4jRl/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <i class="services-icon bi-lightbulb"></i>
+                                            <img src="images/15-removebg-preview.png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div> 
