--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p><a href="https://drive.google.com/file/d/1Pco9OYfYGzua23qHUhQVb4a5ddgyRub2/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
-                                            <img src="images/14-removebg-preview.png" width="100" height="100">
+                                            <img src="images/14-removebg-preview (1).png" width="100" height="100">
                                         </div>
                                     </div>
                                 </div>
