--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@ https://templatemo.com/tm-578-first-portfolio
                             </div>
                         </div>
                         
-                            <div class="col-lg-5 col-12 position-relative">
-                                <div class="hero-image"></div>
-                            <img src="images/picself.png" class="hero-image img-fluid" alt="">
-                        </div>
+            <div class="col-lg-5 col-12">
+                <img src="images/picself.png" style="position: absolute; top: 50%; right: 0; transform: translateY(-50%);" alt="Picself">
+            </div>
                         
                     </div>
                 </div>
