--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ https://templatemo.com/tm-578-first-portfolio
                             </div>
                         </div>
                         
-            <div class="col-lg-5 col-12">
-                <img src="images/picself.png" style="position: absolute; top: 50%; right: 0; transform: translateY(-50%);" alt="Picself">
+            <div class="col-lg-5 col-12 position-relative">
+                <img src="images/picself.png" style="position: absolute; top: 50%; right: 10px; transform: translateY(-50%); z-index: 999;" alt="">
             </div>
                         
                     </div>
