--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ https://templatemo.com/tm-578-first-portfolio
                                 <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
                                     <img src="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="projects-image img-fluid" alt="">
                                 </a>
-                                <a href="https://github.com/lycastillo/trytry.git" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
+                                <a href="https://github.com/lycastillo/FINAL_PROJECT.git" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
                             </div>
                         </div>
 
